# meralion

./: .dockerignore  .env.example  .gitignore  COMPREHENSIVE_REVIEW.md  CONSOLIDATION_SUMMARY.md  DOCKER.md  DOCUMENTATION_UPDATES_REQUIRED.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FINAL_REVIEW_SUMMARY.md  LICENSE  LLM_GUARDRAIL_SETUP.md  MERGE_STRATEGY.md  Makefile  NORMALIZATION_FIX_SUMMARY.md  README.md  README.md.bak  USER_JOURNEY.md  docker-compose.yml  fairness.ipynb  make_synthetic_profanity.py  mvp.py  profanity_list.txt  pyproject.toml  requirements-lock.txt  requirements.txt
asr_eval/: __init__.py  audio.py  cli.py  device.py
configs/: fairness.yaml  robustness.yaml  robustness_3b_only.yaml  self_curated.yaml  toxicity_10b.yaml  toxicity_3b.yaml  toxicity_trigger_10b.yaml  toxicity_trigger_3b.yaml  toxicity_trigger_whisper.yaml  toxicity_whisper.yaml
data/: Self-Curated Transcription Helper.ipynb
docs/: guardrails-testing-plan.md  self-curated-evaluation-plan.md
results/: MERaLiON-2-10B_results.csv  MERaLiON-2-10B_results.jsonl  Whisper-small_results.csv  Whisper-small_results.jsonl  recalculated_metrics.json  summary.json
scripts/: TTS_INSTRUCTIONS.md  analyze_guardrail_layers.py  excel_to_manifest.py  generate_audio_files.py  generate_guardrail_examples_chart.py  generate_guardrail_visualizations.py  generate_realistic_guardrail_samples.py  generate_token_variant_chart.py  generate_toxicity_visualization.py  generate_visualizations.py  recalculate_metrics.py  regenerate_summary.py  update_final_report.py  update_readme.py  (+3 more)
(+190 files in other folders)
